--- a/Flexbox.html
+++ b/Flexbox.html
@@ -4,46 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Gallery</title>
-    <style>
-        *{
-            box-sizing: border-box;
-        }
-        body{
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
-            margin: 0;
-        }
-        .column > img{
-            width: 100%;
-            vertical-align: middle;
-            margin-top: 8px;
-        }
-        .header{
-            text-align: center;
-        }
-        .row{
-            display: flex;
-            flex-wrap: wrap;
-            padding: 0 4px;
-        }
-        .column{
-            flex: 25%;
-            max-width: 25%;
-            padding: 0 4px;;
-        }
-        @media(max-width: 800px){
-            .column{
-                flex: 50%;
-                max-width: 50%;
-            }
-        }
-        @media(max-width: 600px){
-            .column{
-                flex: 100%;
-                max-width: 100%;
-            }
-        }
-        
-    </style>
+    <link rel="stylesheet" href="flexstyles.css">
+    
 </head>
 <body>
     <div class="header">
